[package]
name = "api_examples"
version = "0.1.0"
authors = ["diamondrod"]
edition = "2021"
publish = false
description = """
NOT A PACKAGE TO PUBLISH.

This module provides examples of using `api` feature of `kdbplus` library. The functions defined in
 the library are used for simple tests.
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
kdbplus = { path = "../kdbplus", features = ["api"] }
