[package]
name = "ipc_examples"
version = "0.1.1"
authors = ["diamondrod"]
edition = "2021"
publish = false
description = """
NOT A PACKAGE TO PUBLISH.

This module provides examples of using `ipc` feature of `kdbplus` library. The functions defined in
 the library are used for simple tests.
"""

[dependencies]

[dev-dependencies]
kdbplus = { path = "../kdbplus", features = ["ipc"] }
chrono = "0.4"
tokio = { version = "1.0", features = [
  "net",
  "rt",
  "io-util",
  "fs",
  "macros",
  "rt-multi-thread",
] }
