[package]
name = "kdbplus"
version = "0.2.2"
authors = ["diamondrod"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/diamondrod/kdbplus"
documentation = "https://docs.rs/kdbplus"
readme = "../README.md"
description = """
Dual q/kdb+ interface for API to build a shared library and an IPC client.
"""

[dependencies]
chrono={version="^0.4.5", optional = true}
trust-dns-resolver={version= "^0.20", optional = true}
once_cell={version="^1.7", optional = true}
tokio={version="1.0", features=["net", "rt", "io-util", "fs", "macros", "rt-multi-thread"], optional = true}
tokio-native-tls={version="^0.3", optional = true}
async-trait ={version= "^0.1.42", optional = true}
sha1={version="^0.6", optional=true}

[features]
# Include nothing by default
default = []
# Select one of two features
api=[]
ipc=["once_cell", "chrono", "trust-dns-resolver", "tokio", "tokio-native-tls", "async-trait", "sha1"]

[dev-dependencies]
# IPC test and example
async-std={version="1.8.0", features=["tokio1", "attributes"]}
float-cmp="^0.8"
# C API test and example
libc="^0.2"

[package.metadata.docs.rs]
all-features = true