[package]
name = "kdbplus"
version = "0.3.8"
authors = ["diamondrod"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/diamondrod/kdbplus"
documentation = "https://docs.rs/kdbplus"
readme = "../README.md"
description = """
Dual q/kdb+ interface for API to build a shared library and an IPC client.
"""

[dependencies]
chrono={version="0.4", optional = true}
trust-dns-resolver={version= "0.22", optional = true}
once_cell={version="1", optional = true}
tokio={version="1", features=["net", "rt", "io-util", "fs", "macros", "rt-multi-thread"], optional = true}
tokio-native-tls={version="0.3", optional = true}
async-trait={version= "0.1", optional = true}
async-recursion="1"
sha1_smol={version="1", optional=true}

[features]
# Include nothing by default
default = []
# Select one of two features
api=[]
ipc=["once_cell", "chrono", "trust-dns-resolver", "tokio", "tokio-native-tls", "async-trait", "sha1_smol"]

[dev-dependencies]
# IPC test and example
async-std={version="1.8.0", features=["tokio1", "attributes"]}
float-cmp="0.8"
# C API test and example
libc="0.2"

[package.metadata.docs.rs]
all-features = true